--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <section id="quienes-somos" class=" py-5 d-sm-block">
         <div class="container">
             <h2 class="text-center">¿Quiénes somos?</h2>
-            <hr class="linea">
+            <hr class="linea" style="border: none; height: 4px; background-color: #ffffff;">
             <div class="row pt-4">
                 <div class="col-md-6 d-none d-md-block">
                     <div class="container-quienes-somos">
@@ -115,7 +115,8 @@
                             excepturi sed voluptatibus quaerat quam illum numquam dolores ad! Quos mollitia provident
                             quasi at quaerat deleniti doloremque enim iste non fugiat! Iste atque laboriosam commodi.
                             Dicta debitis consequuntur voluptatem. Inventore omnis delectus, amet accusamus pariatur
-                            nobis minus deserunt libero? Officia et, repellat, ad odio, delectus vero placeat</p>
+                            nobis minus deserunt libero? Officia et, repellat, ad odio, delectus vero placeat
+                        </p>
 
                     </div>
                 </div>
@@ -129,7 +130,7 @@
     <section id="destacados" class="py-5 d-sm-block">
         <div class="container">
             <h2 class="text-center">Destacados</h2>
-            <hr class="linea">
+            <hr class="linea" style="border: none; height: 4px; background-color: #ffffff;">
             <div class="row pt-4">
                 <!-- Tarjeta 1 -->
                 <div class="col-md-6 mb-4">
@@ -243,7 +244,7 @@
     <section id="destacados" class="py-5 d-sm-block">
         <div class="container">
             <h2 class="text-center">Testimonios</h2>
-            <hr class="linea">
+            <hr class="linea" style="border: none; height: 4px; background-color: #ffffff;">
     </section>
     <section class="testimonials">
         <div class="testimonials__container text-center">
@@ -258,7 +259,7 @@
             </div>
             <div class="testimonials__card">
                 <p class="testimonials__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto veniam
-                    porro saepe expedita eligendi blanditiis obcaecati. Eaque fugiat sunt consectetur! Culpa quaerat
+                    porro saepe expedita eligendi blanditiis obcaecati.fugiat sunt consectetur! Culpa quaerat
                     doloremque neque blanditiis minima aperiam, maiores voluptatem id.</p>
                 <img src="./assets/img/testimonio2.jpg" class="testimonials__img" alt="Testimonio 2">
                 <div class="testimonials__body">
@@ -280,34 +281,40 @@
     <section id="contacto" class="py-5">
         <div class="container">
             <h2 class="text-center mb-4">Contacto</h2>
-            <hr class="linea">
+            <hr class="linea" style="border: none; height: 4px; background-color: #ffffff;">
 
             <div class="row">
                 <div class="col-md-6">
                     <form>
                         <div class="form-group mb-3">
                             <div class="row">
-                                <div class="col-md-6"><i class="fa-solid fa-circle-info"></i>
-                                    <label for="firstName" class="form-label">Nombre</label>
+                                <div class="col-md-6">
+                                    <i class="fa-solid fa-circle-info"></i>
+                                    <label for="firstName" class="form-label" data-bs-toggle="tooltip"
+                                        title="Introduce tu nombre completo">Nombre</label>
                                     <input type="text" class="form-control" id="firstName" name="firstName">
                                 </div>
-                                <div class="col-md-6"><i class="fa-solid fa-circle-info"></i>
-                                    <label for="exampleInputEmail1" class="form-label">Email</label>
+                                <div class="col-md-6">
+                                    <i class="fa-solid fa-circle-info"></i>
+                                    <label for="inputEmail" class="form-label" data-bs-toggle="tooltip"
+                                        title="Introduce tu correo electrónico">Email</label>
                                     <input type="email" class="form-control" id="inputEmail">
-
                                 </div>
                             </div>
                         </div>
 
                         <div class="form-group mb-3">
-                            <label for="inputMessage" class="form-label">Mensaje</label><i
-                                class="fa-solid fa-circle-info"></i>
+                            <i class="fa-solid fa-circle-info"></i>
+                            <label for="inputMessage" class="form-label" data-bs-toggle="tooltip"
+                                title="Escribe tu mensaje o consulta">Mensaje</label>
                             <textarea class="form-control" id="inputMessage" rows="3"></textarea>
                         </div>
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Acepta los términos y
-                                condiciones</label>
+                            <label class="form-check-label" for="exampleCheck1">
+                                <a href="#" style="color: #ffffff;" data-bs-toggle="modal"
+                                    data-bs-target="#termsModal">Acepta los términos y condiciones</a>
+                            </label>
                         </div>
                         <button type="submit" class="btn btn-light">Enviar</button>
                     </form>
@@ -324,6 +331,24 @@
             </div>
         </div>
     </section>
+    <!-- Modal de Términos y Condiciones -->
+    <div class="modal fade" id="termsModal" tabindex="-1" aria-labelledby="termsModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content" style="background-color: #000000; color: #ffffff;">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="termsModalLabel">Términos y Condiciones</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Aquí van los términos y condiciones de tu sitio web. Puedes incluir toda la información legal
+                        necesaria que los usuarios deben conocer antes de aceptar.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://kit.fontawesome.com/da5be8e1a4.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
